# robotican

./: .gitignore  README.md
armadillo_arm/: .setup_assistant  CMakeLists.txt  package.xml
armadillo_arm/config/: armadillo_with_arm.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
armadillo_arm/launch/: armadillo_with_arm_moveit_controller_manager.launch.xml  armadillo_with_arm_moveit_sensor_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
moveit_plugin_armadillo/: CMakeLists.txt  armadillo_arm_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
moveit_plugin_armadillo/models/: armadillo_arm.urdf
moveit_plugin_armadillo/src/: armadillo_arm_arm_ikfast_moveit_plugin.cpp
ric_board/: CMakeLists.txt
ric_board/scripts/: web_test.py
robotican/: package.xml
robotican/installations/: install.sh
robotican/setup/: setup.sh
robotican_arm/: CMakeLists.txt  package.xml  robotican_komodo_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
robotican_arm/models/: arm.xacro  ik.cpp
robotican_arm/src/: arm_solver.cpp  ikfast61_arm.cpp  robotican_komodo_arm_ikfast_moveit_plugin.cpp
robotican_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  robotican_arm_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
robotican_arm_moveit_config/config/: kinematics.yaml  robotican_arm.srdf
robotican_arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robotican_arm_moveit_config/src/: robotican_arm_arm_ikfast_moveit_plugin.cpp  robotican_arm_arm_ikfast_solver.cpp
robotican_armadillo/: CMakeLists.txt  package.xml
robotican_armadillo/config/: arm_config.yaml  controllers.yaml  hardware_interface_config.yaml  joystick_teleop.yaml
robotican_armadillo/launch/: armadillo.launch  armadillo_all_sensors.launch
robotican_armadillo/src/: pan_tilt_joy_node.cpp  robotican_h_manipulator_node.cpp
robotican_armadillo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robotican_armadillo_moveit_config/config/: armadillo_robot.srdf  controllers.yaml  depth_sensor.yaml  kinematics.yaml  ompl_planning.yaml  paddings.yaml
robotican_armadillo_moveit_config/launch/: armadillo_robot_moveit_controller_manager.launch.xml  armadillo_robot_moveit_sensor_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robotican_common/: CMakeLists.txt  package.xml
robotican_common/config/: detection.object.ros.ork  detection.ros.ork  detection.table.ros.ork
robotican_common/exec/: firmware.hex
robotican_common/gazebo/: asus_xtion_pro_live.xacro  imu.xacro  softkinetic_camera_ds325.xacro  sr300.xacro
robotican_common/launch/: amcl_diff.launch  ar_track_alvar.launch  arm_joy.launch  f200.launch  gmapping_slam.launch  head_action.launch  hector_slam.launch  joystick_teleop.launch  kinect2.launch  kinect2_with_tf.launch  openni_cam.launch  pick_and_place_tcp_client.launch  rgbd_mapping.launch  rgbd_mapping_kinect2.launch  rgbdslam_kinnect2.launch  rgbdslam_octomap_server.launch  robot_localization.launch  softkinetic_camera_ds325.launch  sr300.launch
robotican_common/src/: ar_tags_tf2pose.cpp  arm_joy_node.cpp  drive2object.cpp  find_objects.cpp  objects_handler.cpp  pan_tilt_object_tracking.cpp  pan_tilt_object_tracking.cpp.autosave  pick_and_place_tcp_client.cpp  pick_and_place_tcp_server.cpp  point_head_action.cpp
robotican_common/worlds/: building_with_elevator.world  objects_on_table.world  small_office.world
robotican_controllers/: CMakeLists.txt  package.xml  ros_control_plugins.xml
robotican_demos/: CMakeLists.txt  CMakeLists.txt.autosave  package.xml
robotican_demos/config/: amcl.rviz  blue_object.yaml  green_object.yaml  red_object.yaml
robotican_demos/launch/: amcl_demo.launch  armadillo_find_objects.launch  armadillo_find_objects_demo.launch  armadillo_find_objects_demo_real.launch  armadillo_find_objects_demo_sim.launch  armadillo_gmapping_sim.launch  armadillo_hector_slam_sim.launch  armadillo_moveit.launch  armadillo_office_demo.launch  armadillo_pan_tilt_tracking.launch  armadillo_pan_tilt_tracking_demo.launch  armadillo_pan_tilt_tracking_demo_real.launch  armadillo_pick_and_place.launch  armadillo_pick_demo.launch  (+18 more)
robotican_gui/: CMakeLists.txt  README  package.xml
robotican_gui/config/: robotican_gui.yaml
robotican_gui/include/: arm_move.h  event_signal.h  event_slot.h  gui_manager.h  led.h  listeners.hpp  robotican_gui.h
robotican_gui/resources/images/: image_resource_file.qrc
robotican_gui/resources/ui/: robotican_gui.ui
robotican_gui/src/: arm_move.cpp  event_signal.cpp  event_slot.cpp  gui_manager.cpp  led.cpp  main.cpp
robotican_gui/src/event_handler/: ArmMove.cpp  ArmMove.h  DriveMode.cpp  DriveMode.h  EventSignal.cpp  EventSignal.h  EventSlot.cpp  EventSlot.h
robotican_gui/src/gui_manager/: GUIManager.cpp  GUIManager.h
robotican_gui/src/listeners/: Battery.cpp  Battery.h  Kinect2.cpp  PanTilt.cpp  PanTilt.h  sr300.cpp  sr300.h
robotican_hardware_interface/: CMakeLists.txt  package.xml
robotican_komodo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robotican_manipulator_h/: CMakeLists.txt  package.xml
(+157 files in other folders)
